--- a/public/css/assets.scss
+++ b/public/css/assets.scss
@@ -9,8 +9,8 @@
     --font-color: #e9e9e9;
     --font-color-dark: #aaafb6;
 
-    --accent-color-1: #8abffa;
-    --accent-color-2: #304e75;
+    --accent-color-1: #8abffa;//00BFFF
+    --accent-color-2: #304e75;//007BFF
 
     --orange: #f2a965;
     --green: #097969;
