--- a/public/css/themes/dark.scss
+++ b/public/css/themes/dark.scss
@@ -4,8 +4,8 @@
     --font-color: #e9e9e9;
     --font-color-dark: #aaafb6;
 
-    --accent-color-1: #8abffa;
-    --accent-color-2: #304e75;
+    --accent-color-1: #00BFFF;
+    --accent-color-2: #007BFF;
 
     --orange: #f2a965;
     --green: #097969;
@@ -16,17 +16,17 @@
     --bg-2: #171b22;
     --bg-3: #181c21;
 
-    --keyword: #c18ee1;
+    --keyword: #c4a1fa;
     --variable-1: var(--font-color-dark);
     --def: var(--font-color-dark);
     --atom: var(--accent-color-1);
     --property: var(--accent-color-1);
-    --string: #a0c281;
+    --string: #b3ec78;
     --number: #c99d6e;
     --type: #70b4c0;
     --comment: #515761;
     --qualifier: #bd946a;
-    --tag: #cd6367;
+    --tag: #d17377;
     --attribute: #bd946a;
     --error: #d17377;
 }
