Added settings window

--- a/public/css/assets.scss
+++ b/public/css/assets.scss
@@ -10,7 +10,7 @@
     --font-color-dark: #aaafb6;
 
     --accent-color-1: #8abffa;//00BFFF
-    --accent-color-2: #304e75;//007BFF
+    --accent-color-2: #007BFF;//007BFF
 
     --orange: #f2a965;
     --green: #097969;
