--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,6 +2,10 @@
     --svg-color: var(--font-color);
 }
 
+body {
+    background-color: var(--bg-1);
+}
+
 header {
     padding-left: 0px;
     width: 100%;
@@ -42,7 +46,7 @@ main {
 
         .highlight {
             // Gradient text
-            background: linear-gradient(90deg, #00BFFF, #007BFF);
+            background: linear-gradient(90deg, var(--accent-color-1), var(--accent-color-2));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 700;
