Added colorScheme to settings

--- a/public/css/assets.scss
+++ b/public/css/assets.scss
@@ -21,6 +21,8 @@
     --bg-2: #171b22;
     --bg-3: #181c21;
 
+    --selection: #3399ff;
+
     --font-size-editor: 15px;
     --font-size-preview: 16px;
 }
