--- a/public/css/colorSchemes/light.scss
+++ b/public/css/colorSchemes/light.scss
@@ -16,6 +16,8 @@
     --bg-2: #f2eff2;
     --bg-3: #f5f6f8;
 
+    --selection: rgba(0, 122, 255, 0.3);
+
     --keyword: #6500ff;
     --variable-1: var(--font-color-dark);
     --def: var(--font-color-dark);
