--- a/public/css/editor.scss
+++ b/public/css/editor.scss
@@ -98,7 +98,7 @@
 
 // Selection
 .cm-s-featherflow div.CodeMirror-selected {
-    background: var(--accent-color-2)
+    background: var(--selection);
 }
 
 .cm-s-featherflow .cm-keyword {
