--- a/public/css/colorSchemes/dark.scss
+++ b/public/css/colorSchemes/dark.scss
@@ -16,6 +16,8 @@
     --bg-2: #171b22;
     --bg-3: #181c21;
 
+    --selection: rgba(0, 122, 255, 0.3);
+
     --keyword: #c4a1fa;
     --variable-1: var(--font-color-dark);
     --def: var(--font-color-dark);
