windows title bar buttons pointer

--- a/public/css/assets.scss
+++ b/public/css/assets.scss
@@ -151,7 +151,7 @@ header {
                 }
 
                 &:hover {
-                    cursor: pointer;
+                    cursor: default;
                     background-color: rgba(255, 255, 255, 0.1);
 
                     &.danger {
