--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -46,7 +46,11 @@ main {
 
         .highlight {
             // Gradient text
-            background: linear-gradient(90deg, var(--accent-color-1), var(--accent-color-2));
+            background: linear-gradient(
+                90deg,
+                var(--accent-color-1),
+                var(--accent-color-2)
+            );
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 700;
