--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -1,5 +1,5 @@
 :root {
-    --name: "Default";
+    --name: 'Default';
     --index: 0;
 
     /* ---      --- */
@@ -8,8 +8,8 @@
     --d-font-color: #e9e9e9;
     --d-font-color-dark: #aaafb6;
 
-    --d-accent-color-1: #00BFFF;
-    --d-accent-color-2: #007BFF;
+    --d-accent-color-1: #00bfff;
+    --d-accent-color-2: #007bff;
 
     --d-button-active: rgba(0, 0, 0, 0.3);
 
@@ -33,16 +33,14 @@
     --d-attribute: #bd946a;
     --d-error: #d17377;
 
-
-
     /* ---      --- */
     /* Light colors */
     /* ---      --- */
     --l-font-color: #000;
     --l-font-color-dark: #222;
 
-    --l-accent-color-1: #00BFFF;
-    --l-accent-color-2: #007BFF;
+    --l-accent-color-1: #00bfff;
+    --l-accent-color-2: #007bff;
 
     --l-button-active: rgba(0, 0, 0, 0.1);
 
